# down-up

./: LICENSE  README.md  app.py  serviceAccountKey.json
down-up/: pyproject.toml
down-up/src/: main.py  router.py  utils.py
down-up/src/pages/: audiobook_page.py  no_connection_page.py  template_page.py
down-up/src/pages/alphabet/: alphabet_index_page.py
down-up/src/pages/daily_life/: healthy_foods_page.py
down-up/src/pages/emotions/: emotions_index_page.py
down-up/src/pages/memory/: memory_index_page.py
down-up/src/pages/music/: music_index_page.py
src/pages/: audiobooks_page.py  home_page.py  how_are_you_today_page.py  login_page.py  observer_page.py
src/pages/alphabet/: which_letter_page.py
src/pages/daily_life/: daily_life_index_page.py  tooth_brushing_page.py
src/pages/emotions/: whats_going_on_page.py  which_kid_has_emotion_page.py
src/pages/maths/: how_much_page.py  maths_index_page.py  name_shapes_page.py
src/pages/memory/: memory_cards_page.py
src/pages/music/: clap_rhythm_page.py
